# Platform-game

./: .gitignore  CMakeLists.txt  README.md
assets/levels/: coins.txt  dangerousitems.txt  enemies.txt  items.txt  location.txt  newbox.txt  specialobjects.txt  textures.txt
src/: Animation.cpp  Coin.cpp  Coin.h  Collider.cpp  DangerousItems.cpp  DangerousItems.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  Items.cpp  Items.h  Level.cpp  Level.h  LevelView.cpp  LevelView.h  Menu.cpp  Menu.h  NewBox.cpp  NewBox.h  NewCharacter.cpp  NewCharacter.h  Platform.h  Player.cpp  Player.h  SpecialObjects.cpp  SpecialObjects.h  main.cpp
